fix z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1170,7 +1170,7 @@ hr.margin {
   height: 94px;
   z-index: 2;
 }
-.taste:before {
+.taste:after {
   content: "";
   display: block;
   position: absolute;
@@ -1180,23 +1180,24 @@ hr.margin {
   top: 0px;
   z-index: 10;
   background: url("../img/taste/0.webp") no-repeat center center/cover;
+  will-change: transform;
 }
 .taste li {
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: 9;
+  z-index: 3;
   left: 0px;
   top: 0px;
   transform: translate(0px, 10%);
 }
 .taste li:nth-child(2) {
   transform: translate(0px, 20%);
-  z-index: 8;
+  z-index: 2;
 }
 .taste li:nth-child(3) {
   transform: translate(0px, 30%);
-  z-index: 7;
+  z-index: 1;
 }
 .taste li img {
   width: 100%;
